@@ -3,20 +3,19 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.alienlabs.adaloveslace</groupId>
   <artifactId>adaloveslace</artifactId>
-  <version>0.3.0</version>
+  <version>0.5.0</version>
   <description>A tatting lace patterns creation software</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>19</java.version>
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
-    <test-plugins.version>3.0.0-M8</test-plugins.version>
-    <javafx.version>19</javafx.version>
-    <itext.version>7.2.2</itext.version>
-    <testfx.version>4.0.16-alpha</testfx.version>
-    <junit.version>5.8.2</junit.version>
-    <logback.version>1.3.0-alpha16</logback.version>
+    <java.version>21</java.version>
+    <javafx.version>21</javafx.version>
+    <test-plugins.version>3.1.2</test-plugins.version>
+    <itext.version>8.0.2</itext.version>
+    <testfx.version>4.0.17</testfx.version>
+    <junit.version>5.10.1</junit.version>
+    <logback.version>1.4.11</logback.version>
+    <dependency-check-maven.version>8.4.0</dependency-check-maven.version>
   </properties>
 
   <dependencies>
@@ -68,12 +67,12 @@
     <dependency>
       <groupId>jakarta.xml.bind</groupId>
       <artifactId>jakarta.xml.bind-api</artifactId>
-      <version>4.0.0</version>
+      <version>4.0.1</version>
     </dependency>
     <dependency>
       <groupId>com.sun.xml.bind</groupId>
       <artifactId>jaxb-impl</artifactId>
-      <version>4.0.0</version>
+      <version>4.0.4</version>
     </dependency>
 
     <dependency>
@@ -95,13 +94,13 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>2.0.0-alpha7</version>
+      <version>2.0.9</version>
     </dependency>
 
     <dependency>
       <groupId>com.github.spotbugs</groupId>
       <artifactId>spotbugs-annotations</artifactId>
-      <version>4.7.3</version>
+      <version>4.8.1</version>
       <scope>compile</scope>
     </dependency>
 
@@ -139,23 +138,23 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>4.6.1</version>
+      <version>5.7.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
 
   <build>
-    <finalName>adaloveslace</finalName>
+    <finalName>AdaLovesLace</finalName>
 
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
-          <configuration>
-              <source>${java.version}</source>
-              <target>${java.version}</target>
-          </configuration>
+        <version>3.11.0</version>
+        <configuration>
+          <source>21</source>
+          <target>21</target>
+        </configuration>
       </plugin>
 
       <plugin>
@@ -176,7 +175,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>3.3.0</version>
         <configuration>
           <archive>
             <manifest>
@@ -222,20 +221,35 @@
           <excludes>
             <exclude>**/unittest/**</exclude>
           </excludes>
-          <argLine>@{argLine} --add-exports javafx.graphics/com.sun.javafx.application=org.testfx</argLine>
+          <argLine>@{argLine} --add-opens javafx.graphics/com.sun.javafx.application=testfx.core</argLine>
           <skipITs>${skipFTs}</skipITs>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <version>${dependency-check-maven.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <failBuildOnCVSS>7</failBuildOnCVSS>
         </configuration>
       </plugin>
 
       <plugin>
         <groupId>com.github.spotbugs</groupId>
         <artifactId>spotbugs-maven-plugin</artifactId>
-        <version>4.7.3.0</version>
+        <version>4.8.1.0</version>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.8</version>
+        <version>0.8.10</version>
         <configuration>
           <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
           <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
@@ -263,7 +277,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-pmd-plugin</artifactId>
-          <version>3.20.0</version>
+          <version>3.21.2</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -292,7 +306,7 @@
           <plugin>
             <groupId>io.github.fvarrui</groupId>
             <artifactId>javapackager</artifactId>
-            <version>1.6.7</version>
+            <version>1.7.5</version>
             <executions>
               <execution>
                 <phase>package</phase>
@@ -310,7 +324,7 @@
                   <generateMsm>false</generateMsm>
                   <administratorRequired>false</administratorRequired>
                   <platform>linux</platform>
-                  <jrePath>/usr/lib/jvm/jdk-19</jrePath>
+                  <jrePath>${env.JAVA_HOME}</jrePath>
                   <additionalResources>
                   </additionalResources>
                 </configuration>
@@ -345,7 +359,7 @@
                     <generateMsm>true</generateMsm>
                     <administratorRequired>false</administratorRequired>
                     <platform>windows</platform>
-                    <jrePath>C:\Program Files\Java\jdk-19</jrePath>
+                    <jrePath>${env.JAVA_HOME}</jrePath>
                     <winConfig>
                       <headerType>console</headerType>
                       <setupLanguages>
